Secure Logger part01

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Debug Local File",
             "type": "Ruby",
             "request": "launch",
-            "env": {"RUBYLIB":"${workspaceRoot}/:${workspaceRoot}/lib"},
+            "env": {"RUBYLIB":"${workspaceRoot}\\;${workspaceRoot}\\lib"},
             "program": "${workspaceRoot}/bin/OpenPGP.rb"
         }
     ]
