--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Debug Local File",
             "type": "Ruby",
             "request": "launch",
-            "env": {"RUBYLIB":"${workspaceRoot}/:${workspaceRoot}/lib"},
-            //"env": {"RUBYLIB":"${workspaceRoot}\\;${workspaceRoot}\\lib"},
-            "program": "${workspaceRoot}/bin/OpenPGP.rb"
+            //"env": {"RUBYLIB":"${workspaceRoot}/:${workspaceRoot}/lib"},
+            "env": {"RUBYLIB":"${workspaceRoot}\\;${workspaceRoot}\\lib"},
+            "program": "${workspaceRoot}/bin/OpenPGPca.rb"
             //"program": "${workspaceRoot}/bin/r509"
         }
     ]
